--- a/app/templates/cadastro.html
+++ b/app/templates/cadastro.html
@@ -98,7 +98,7 @@
                         <input id="confirmPassword" type="password" name="confirmPassword" placeholder="Digite sua senha novamente" required>
                     </div>
                 <div class="continue-button">
-                    <button><a href="#">Continuar</a> </button>
+                    <button type="submit" ><a href="#" >Continuar</a> </button>
                 </div>
             </form>
     </div>
